<resources>
    <string name="app_name">HealthConsulation</string>
    <string name="home">ရောဂါအမျိုးအစား</string>
    <string name="appointments">ချိန်းဆိုမှုများ</string>
    <string name="profile">အကောင့်</string>
    <string name="speciality_label">ရောဂါအမျိုးအစားများ</string>
    <string name="speciality">အမျိုးအစား</string>
    <string name="consultation">ချိန်းဆိုမှုများ</string>
    <string name="account">အေကာင့် </string>
    <string name="sure">သေချာပါသည်</string>
    <string name="answer_hint">ဖြေဆိုပါ</string>
    <string name="cancel">မလုပ်တော့ပါ</string>
    <string name="consultation_confirm">ဆွေးနွေးမှုအတည်ပြုချက်</string>
    <string name="consultation_request_message">ဆိုင်ရာ ဆရာဝန် နှင့် တိုင်ပင်ဆွေးနွေးရန်  Consultation Request ပြုလုပ်မှာသေချာပါသလား?</string>
    <string name="recent_consultation">မကြာသေးခင်ကဆွေးနွေးမှုများ</string>
    <string name="patient_info">လူနာအချက်အလက် များဖြည့်ပါ</string>
    <string name="general_question">အထွေထွေမေးခွန်းများ</string>
    <string name="special_question">ရောဂါဆိုင်ရာမေးခွန်းများ</string>
    <string name="continue_btn">ဆက်ရန်</string>
    <string name="start_consultation_btn">ချိန်းဆိုမှုပြုလုပ်မည်</string>
    <string name="patient_details">လူနာအချက်အလက် များ</string>
    <string name="to_confirm_patient_info">အချက်အလက်များအားအတည်ပြုပါ</string>
    <string name="consultation_confirm_message_start">ဆွေးနွေးမှု ပြုလုပ်ရန် </string>
    <string name="consultation_confirm_message_end">မှ လက်ခံ ထားပါသည်</string>
    <string name="consultation_message">ဆွေးနွေးမှု ပြုလုပ်နိုင်ပါ ပြီ</string>
    <string name="start_consultation">စတင်ဆွေးနွေးမည်</string>
    <string name="patient_name">လူနာအမည်</string>
    <string name="patient_dateOfbirth">မွေးနေ့</string>
    <string name="patient_height">အရပ်</string>
    <string name="patient_blood_type">သွေး အုပ်စု အမျိုးအစား</string>
    <string name="patient_weight">ခန္ဓာကိုယ် ပေါင်ချိန်</string>
    <string name="patient_blood_pressure">သွေးပေါင်ချိန်</string>
    <string name="patient_reactionalert">မတည့်သောဆေး</string>
    <string name="patient_reaction_alert_hint">မတည့်သောဆေးရှိလျင်ရေးသားပေးပါ</string>
    <string name="ft">ft</string>
    <string name="lb">lb</string>
    <string name="mmhg">mmHg</string>
    <string name="see_more">ထပ်ကြည့်မည်</string>
    <string name="send_message">ရေးသားပါ</string>
    <string name="prescription_title">ဆေးညွန်းမှာယူမည်</string>
    <string name="order">မှာယူမည်</string>
    <string name="prescription">ဆေးညွန်း</string>
    <string name="address">လိပ်စာ</string>
    <string name="state">တိုင်း/ ပြည်နယ်</string>
    <string name="township">မြို့နယ်</string>
    <string name="full_address">လိပ်စာအပြည့်အစုံ</string>
    <string name="choose_address">လိပ်စာရွေးချယ်ပါ</string>
    <string name="new_address">လိပ်စာအသစ်</string>
    <string name="chat_history">ချိန်းဆိုမှုမှတ်တမ်းများ</string>
    <string name="send">စာပို့မည်</string>
    <string name="purhcase">ငွေပေးချေမည်</string>
    <string name="amount">ပမာဏ</string>
    <string name="quality">အရေအတွက်</string>
    <string name="delay_time">ကြာချိန်</string>
    <string name="comment">မှတ်ချက်</string>
    <string name="count">အကြိမ်အရေတွက်</string>
    <string name="close">ပိတ်မည်</string>
    <string name="consulation_request">ရက်ချိန်းယူခြင်းတောင်းဆိုမှု</string>
    <string name="new_patient">လူနာအသစ်</string>
    <string name="consulated_patient">ဆွေးနွေးခဲ့ဖူးသောလူနာ</string>
    <string name="skip">ကျော်မည်</string>
    <string name="accept">လက်ခံမည်</string>
    <string name="next">နောက် မှ</string>
    <string name="postpone">အချိန်ရွေးမည်</string>
    <string name="no_record_postponse">လက်တလောရက်ချိန်းယူထားသော \n မှတ်တမ်းမရှိသေးပါ</string>
    <string name="medicine_history">ဆေးမှတ်တမ်း</string>
    <string name="cosultation_request_history">ရက်ချိန်းယူမှုမှတ်တမ်းများ</string>
    <string name="choose_discuss_time">ဆွေးနွေးမည့်အချိန်ရွေးမည်</string>
    <string name="choose">ရွေးမည်</string>
    <string name="start_consulation">ဆွေးနွေးမှုစတင်မည်</string>
    <string name="consulated_date">ဆွေးနွေးခဲ့သည့်ရက်</string>
    <string name="medicine_title">ဆေးညွန်းမည်</string>
    <string name="finish_consultation">ဆေးညွန်းပြီးဆွေးနွေးမှု ပြီးဆုံးမည်</string>
    <string name="medicine_label">ဆေးကို</string>
    <string name="before_eating">အစားမစားမှီသောက်ရန်</string>
    <string name="after_eating">အစားစားပြီးမှ သောက်ရန်</string>
    <string name="use_medicine">သောက်ရမည့်ရက်</string>
    <string name="morning">မနက်</string>
    <string name="afternoon">နေ့</string>
    <string name="night">ည</string>
    <string name="add">ထည့်မည်</string>
    <string name="search">ရှာမည်</string>
    <string name="save">သိမ်းမည်</string>
    <string name="degree">ရရှိထားသောဘွဲ့များ</string>
    <string name="biography">ကိုယ်ရေးရာဇဝင်</string>
    <string name="question">မေးခွန်းများ</string>
    <string name="logout">အကောင့် ထွက် မည်</string>
    <string name="email">အီးမေးလ်</string>
    <string name="know">နားလည်ပီ</string>
    <string name="general_form">သင့်အချက်အလက် အားလုံး ပြည့်စုံအောင် ဖြည့်စွက်ပေးရန် လိုနေပါသေး သည်</string>
    <string name="username">အမည်</string>
    <string name="checkout">ငွေပေးချေမှုအတည်ပြုပြီးနောက်နေ့တစ်ရက်မှစပြီး ဆေးများကိုလိုက်လန်ပို့ဆောင်ပေးမည်</string>
    <string name="address_title">လိပ်စာ</string>
    <string name="dummy_text_consulation_request">ပါမောကွ  ကြီးသည် UK မှ ဂုဏ်ထူးဆောင် မဟာ ပါရ၈ူဘွဲ့ကို ရရှိထားပြီး ယခုအချိန်တွင် စစ်တွေ မြို့နယ် ဆေး ရုံ ကြီးမှာ တာဝန်ယူကုသပေးနေပါသည်</string>
    <string name="login">အကောင့်ဝင်ပါ</string>
    <string name="do_yout_have_accoumt">အကောင့် မရှိသေးဘူးလား ?</string>
    <string name="create_new_account">အကောင့်အသစ်ပြုလုပ်ပါ</string>
    <string name="email_form">အီးမေးလ် လိပ်စာ</string>
    <string name="email_hint">အီးမေးလ် လိပ်စာ ရိုက်ထည့်ပါ</string>
    <string name="password">စကားဝှက်</string>
    <string name="password_hint">စကားဝှက် ရိုက်ထည့်ပါ</string>
    <string name="register_form">အကောင့် အသစ်ပြုလုပ်ရန်</string>
    <string name="register">အကောင့်ပြုလုပ်မည်</string>
    <string name="already">အကောင့်ရှိပြီးသားလား</string>
    <string name="phone">ဖုန်းနံပါတ်ထည့်ပါ</string>
    <string name="message">ရေးသားပါ</string>
    <string name="test">: Test</string>

    <string-array name="bloodType">
        <item>A သွေး</item>
        <item>B သွေး</item>
        <item>O သွေး</item>
    </string-array>

    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="years">
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>


</resources>