<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:orientation="vertical"
    android:padding="5dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="400dp"
            android:layout_height="700dp"
            android:layout_marginTop="10dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/online_doctor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/to_confirm_patient_info"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_corner_blue"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/patient_details"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:orientation="horizontal"
                    android:weightSum="2.4">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/patient_name"
                        android:textColor="@color/blue_A400" />

                    <TextView
                        android:id="@+id/pname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:padding="5dp"
                        android:text="@string/test"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:orientation="horizontal"
                    android:weightSum="2.4">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/patient_dateOfbirth"
                        android:textColor="@color/blue_A400" />

                    <TextView
                        android:id="@+id/pdateofBirth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:padding="5dp"
                        android:text="@string/test"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:orientation="horizontal"
                    android:weightSum="2.4">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/patient_height"
                        android:textColor="@color/blue_A400" />

                    <TextView
                        android:id="@+id/pheight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:padding="5dp"
                        android:text="@string/test"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:orientation="horizontal"
                    android:weightSum="2.4">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/patient_blood_type"
                        android:textColor="@color/blue_A400" />

                    <TextView
                        android:id="@+id/pbloodtype"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:padding="5dp"
                        android:text="@string/test"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:orientation="horizontal"
                    android:weightSum="2.4">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/patient_weight"
                        android:textColor="@color/blue_A400" />

                    <TextView
                        android:id="@+id/pweight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:padding="5dp"
                        android:text="@string/test"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:orientation="horizontal"
                    android:weightSum="2.4">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/patient_blood_pressure"
                        android:textColor="@color/blue_A400" />

                    <TextView
                        android:id="@+id/pbloodpressure"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:padding="5dp"
                        android:text="@string/test"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:orientation="horizontal"
                    android:weightSum="2.4">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="@string/patient_reactionalert"
                        android:textColor="@color/blue_A400" />

                    <TextView
                        android:id="@+id/pcomment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:padding="5dp"
                        android:text="@string/test"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_corner_blue"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/special_question"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rc_question_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:nestedScrollingEnabled="false" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <org.mmtextview.components.MMButton
            android:id="@+id/cs_btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_btn_blue"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp"
            android:text="@string/start_consultation_btn"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>