<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/card_cornor_radius"
    app:cardElevation="@dimen/card_evaluation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:orientation="vertical">

        <org.mmtextview.components.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_card_medium"
            android:text="@string/consultation_message"
            android:textColor="@color/blue_A700"
            android:textSize="@dimen/text_regular_1x" />

        <org.mmtextview.components.MMTextView
            android:id="@+id/txt_consulation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/consultation_request_message"
            android:textColor="@color/black"
            android:textSize="@dimen/text_regular"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_userprofile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/margin_small"
                android:scaleType="fitXY"
                android:src="@drawable/doctor_thumbnail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <org.mmtextview.components.MMTextView
                    android:id="@+id/txt_doctorname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="Dr . Mg Mg Win"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <org.mmtextview.components.MMTextView
                    android:id="@+id/txt_specialityname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="အရေပြားနှင့် အလှပရေးရာ"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <org.mmtextview.components.MMTextView
            android:id="@+id/txt_doctor_bigoraphy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/dummy_text_consulation_request"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <org.mmtextview.components.MMTextView
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="12dp"
            android:gravity="right"
            android:text="@string/start_consultation"
            android:textColor="@color/blue_A700"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
